--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <a href="https://github.com/TekInformatik/pdf/blob/main/certificate-942010036v.pdf"/>
+  <a href="certificate-942010036v.pdf"/>
   </html>
